# ureactors

./: .gitignore  Experiments.xlsx  README.md  build_archive.sh  particle_stats.ipynb  pyproject.toml  requirements-linux_amd64.txt  requirements-linux_arm64.txt  requirements-macos_arm64.txt  requirements-windows_amd64.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
experiments/LZ-01/: LZ-01.py  LZ-01b.py
experiments/LZ-01/pico_ctrlaer/: VERSION  example.py  pico_ctrlaer.py
experiments/LZ-01/pico_ctrlaer/rp2040hw/: README.md  gpio.py  sysinfo.py
experiments/LZ-02/: LZ-02a.py  LZ-02b.py  LZ-02c.py  LZ-02d-just-alginate.py  LZ-02d-just-calcium.py  LZ-02d.py  LZ-02e.py
experiments/LZ-03/: LZ-03a.py  LZ-03b.py
experiments/LZ-04/: LZ-04a.py
lib/: pico_ctrlaer.py
lib/rp2040hw/: pio.py
