[project]
name = "ureactors"
version = "0.1.0"
description = "Accompanying code for https://doi.org/10.26434/chemrxiv-2024-3zqw5-v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "transformers[torch,torch-vision]>=4.44.2",
]
